@@ -12,13 +12,13 @@ Description: This package implements an algorithm family for continuous
         (MA-LS-Chains). Memetic algorithms are hybridizations of
         genetic algorithms with local search methods. They are
         especially suited for continuous optimization.
-Version: 0.2
-Date: 2013-05-06
+Version: 0.2-1
+Date: 2013-05-10
 Depends: Rcpp (>= 0.9.10)
 Suggests: inline
 Encoding: UTF-8
 Collate: 'malschains.R' 'Rmalschains-package.R'
-Packaged: 2013-05-06 04:29:47 UTC; bergmeir
+Packaged: 2013-10-30 09:00:02 UTC; ripley
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-05-06 07:25:58
+Date/Publication: 2013-10-30 10:02:36
