@@ -51,3 +51,27 @@ omissions in this package or for any misfortune that may befall you or
 others as a result of your use, distribution or other dealings with it.
 
 
+---------------------------------
+
+Furthermore, librealea uses the original cmaes implementation of 
+Nikolaus Hansen, in the files origcmaes.h and origcmaes.cc, which is GPL-3.
+The license text is the following:
+
+     CMA-ES for non-linear function minimization. 
+
+     Copyright 1996, 2003, 2007 Nikolaus Hansen 
+     e-mail: hansen .AT. bionik.tu-berlin.de
+             hansen .AT. lri.fr
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License, version 3,
+    as published by the Free Software Foundation.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
