@@ -1,6 +1,4 @@
-extern "C" {
 #include <R_ext/Print.h>
-}
 /**
  * Copyright 2008, Daniel Molina Cabrera <danimolina@gmail.com>
  * 
